# STM32-laser

./: .gitignore  CMakeLists.txt  Makefile  README.md  STM32F103C8.ld  main.elf  main.hex  openocd.cfg
board_config/: stm32f1x.cfg
include/: blink.h  core.h  init.h  motor.h
include/blink/: blink.h
include/definitions/: definitions.h
include/init/: init.h
include/wifi/: w_init.h
laser/board_config/: gpio_pins.txt  stm32f1x.cfg
laser/include/: core.h  init.h  motor.h
laser/src/: blink.c  core.c  init.c  main.c
src/: blink.c  core.c  init.c  main.c  motor.c  startup.c
src/laser/: blink.c  core.c  init.c  main.c  motor.c
src/wifi/: CMakeLists.txt  wifi.c
wifi/src/: CMakeLists.txt  README.md  wifi.c
